# pytektronix

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytektronix.html  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  python-publish.yml
_sources/: index.rst.txt
docs/: conf.py  modules.rst  pytektronix.rst
pytektronix/: __init__.py  command_group_objects.py  pytektronix_base_classes.py  scopes.py
pytektronix/tests/: test_mdo3024.py
pytronix/: scopes.py
pytronix/tests/: test_Trigger.py  test_channel.py  test_horizontal.py  test_logged_vxi11.py  test_mdo3024.py
src/pytektronix/: __init__.py  command_group_objects.py  not_connecting.sh  pytektronix_base_classes.py  scopes.py
tests/: TestScope.py  test_Trigger.py  test_channel.py  test_horizontal.py  test_logged_vxi11.py  test_mdo3024.py  test_trigger.py
