[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytektronix"
version = "0.0.1"
authors = [
  { name="Matteo Vidali", email="mmvidali@gmail.com" },
]
description = "A python package for controlling tektronix scopes"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/matteovidali/py-tektronix"
"Bug Tracker" = "https://github.com/matteovidali/py-tektronix/issues"
